# compiler-project

./: README.md  Tasks.md  build.bat  run.bat  run_tests.bat
code/: CMakeLists.txt  GUI.py  README.md  lex.yy.c  lexer.l  parser.y  symbolTable..h  symbolTable.c  test.py  y.output  y.tab.c  y.tab.h
code/.cache/clangd/index/: symbolTable.c.F726BA55494DD3D0.idx  symbolTable.h.54F97DD23AF2D23D.idx
code/operation-table/: CMakeLists.txt  operationTable.c  operationTable.cpp  operationTable.h  operationTable.hpp
code/symbol-table/: CMakeLists.txt  symbolTable.c  symbolTable.cpp  symbolTable.h  symbolTable.hpp
code/tests/: operationTable.txt  symbolTable.txt
tests/: input.cpp  input2.cpp  input_test.cpp  operationTable.txt  output.asm  quadTable.txt  symbolTable.txt
